<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>lio2_slam</name>
  <version>0.1.0</version>
  <description>LIO-SLAM: LiDAR-Inertial Odometry and Mapping with SLAM capabilities</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen3-dev</depend>
  <depend>yaml-cpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>libboost-thread-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>